clusters/k3s/apps/media/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
  - port: 7878
    targetPort: 7878
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: radarr
  namespace: docker-services
subsets:
- addresses:
  - ip: 192.168.1.40
  ports:
  - port: 7878
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: radarr
  namespace: docker-services
  labels:
    kubernetes.io/service-name: radarr
addressType: IPv4
endpoints:
- addresses:
  - 192.168.1.40
ports:
- port: 7878
  protocol: TCP
